--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.GithubUser"
         tools:targetApi="31">
         <activity
-            android:name=".DetailUserActivity"
+            android:name=".ui.DetailUserActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
