--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     // room
     implementation 'androidx.room:room-runtime:2.5.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     kapt 'androidx.room:room-compiler:2.5.1'
 
     // datastore
@@ -76,4 +77,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // test mockito
+    testImplementation 'org.mockito:mockito-core:3.6.0'
+    testImplementation 'org.mockito:mockito-inline:3.6.0'
 }
